swag init && ./scripts/buildprod.sh
