# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /
 definitions:
+  views.Client:
+    properties:
+      cst_dim_id:
+        type: integer
+      first_name:
+        type: string
+      gender:
+        type: string
+      last_name:
+        type: string
+    type: object
   views.ErrorResponse:
     properties:
       error:
@@ -126,6 +137,40 @@ paths:
       summary: Login to send the code to phone
       tags:
       - Auth
+  /v1/clients:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Bearer AccessToken
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/views.Client'
+        "401":
+          description: No token Middleware
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+        "404":
+          description: Not found User Middleware
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+        "500":
+          description: Couldn't Get user
+          schema:
+            $ref: '#/definitions/views.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Get User profile
+      tags:
+      - Users
   /v1/profile:
     get:
       consumes:
